--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,12 @@
     "axios": "0.19.2",
     "bootstrap": "4.4.1",
     "bootstrap-vue": "2.11.0",
-    "jquery": "3.5.0",
+    "chart.js": "^2.9.3",
     "core-js": "3.6.5",
+    "jquery": "3.5.0",
+    "moment": "^2.26.0",
     "vue": "2.6.11",
+    "vue-chartjs": "^3.5.0",
     "vue-router": "3.1.6",
     "vuex": "3.1.3"
   },
